--- a/0725.html
+++ b/0725.html
@@ -29,18 +29,19 @@
 
 
 <strong> 1. 준비사항 <br> </strong>
-<table cellspacing="0" style="border-collapse:collapse; width:1172px">
+<table cellspacing="0" style="border-collapse:collapse; width:1149px">
 	<tbody>
 		<tr>
-			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:70px; text-align:center; vertical-align:middle; white-space:nowrap; width:162px"><strong>입국 필요 서류</strong></td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:normal; width:600px">1. 항공권 (귀국용 티켓)<br />
-			2. 이트래블(eTravel) QR 코드 (출발 72시간 이내부터 등록)&nbsp; --&gt; https://etravel.gov.ph/<br />
+			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:93px; text-align:center; vertical-align:middle; white-space:nowrap; width:162px"><strong>입국 필요 서류</strong></td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:normal; width:578px">1. 항공권 (귀국용 티켓)<br />
+			2. 이트래블(eTravel) QR 코드 (출발 72시간 이내부터 등록)<br />
+			&nbsp;&nbsp;&nbsp; --&gt; <a href="https://etravel.gov.ph/"> https://etravel.gov.ph/&nbsp;&nbsp; </a> <br />
 			3. 영문 코로나19 백신접종증명서&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:nowrap; width:410px">&nbsp; --&gt; &quot;4. 참고 자료 -&gt; 필리핀 입국 안내&quot; 참고</td>
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:47px; text-align:center; vertical-align:middle; white-space:nowrap">개인 준비물&nbsp;</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:normal; width:600px">휴대용 우산,&nbsp; 투어용품 (썬글라스, 모자, 수영복/수경, 샌들, 썬크림&nbsp; 등),<br />
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:normal; width:578px">휴대용 우산,&nbsp; 투어용품 (썬글라스, 모자, 수영복/수경, 샌들, 썬크림&nbsp; 등),<br />
 			환전(팁,기념품 등), 피로연 복장(드레스 또는 원피스)</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:normal; width:410px">&nbsp; --&gt; &quot;4. 참고 자료 -&gt; 식당 드레스코드&quot;&nbsp; 참고</td>
 		</tr>
