--- a/0725.html
+++ b/0725.html
@@ -35,8 +35,8 @@
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:93px; text-align:center; vertical-align:middle; white-space:nowrap; width:162px"><strong>입국 필요 서류</strong></td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:normal; width:578px">1. 항공권 (귀국용 티켓)<br />
 			2. 이트래블(eTravel) QR 코드 (출발 72시간 이내부터 등록)<br />
-			&nbsp;&nbsp;&nbsp; --&gt; <a href="https://etravel.gov.ph/"> https://etravel.gov.ph/&nbsp;&nbsp; </a> <br />
-			3. 영문 코로나19 백신접종증명서&nbsp;&nbsp;&nbsp;    -->  정부24 또는 COOV   </td>
+			&nbsp;&nbsp;&nbsp; --&gt; <a href="https://etravel.gov.ph/"> https://etravel.gov.ph/ </a> &nbsp;&nbsp; <br />
+			3. 영문 코로나19 백신접종증명서&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:nowrap; width:410px">&nbsp; --&gt; &quot;4. 참고 자료 -&gt; 필리핀 입국 안내&quot; 참고</td>
 		</tr>
 		<tr>
@@ -271,43 +271,46 @@
 
 
 <strong> 4. 참고 자료 </strong> 
-<table cellspacing="0" style="border-collapse:collapse; width:812px">
+<table cellspacing="0" style="border-collapse:collapse; width:801px">
 	<tbody>
 		<tr>
-			<td rowspan="2" style="border-bottom:.7px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:44px; text-align:center; vertical-align:middle; white-space:nowrap; width:63px">문서</td>
+			<td rowspan="2" style="border-bottom:.7px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:46px; text-align:center; vertical-align:middle; white-space:nowrap; width:63px">문서</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; text-align:center; vertical-align:middle; white-space:nowrap; width:162px">필리핀 입국 안내&nbsp;</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:nowrap; width:586px"><a href="https://www.itsmorefuninthephilippines.co.kr/travel/entry-guidelines">https://www.itsmorefuninthephilippines.co.kr/travel/entry-guidelines</a></td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:nowrap; width:578px"><a href="https://www.itsmorefuninthephilippines.co.kr/travel/entry-guidelines">https://www.itsmorefuninthephilippines.co.kr/travel/entry-guidelines</a></td>
 		</tr>
 		<tr>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 여행 정보&nbsp;</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:23px; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 여행 정보&nbsp;</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.itsmorefuninthephilippines.co.kr/travel-a-to-z">https://www.itsmorefuninthephilippines.co.kr/travel-a-to-z</a></td>
 		</tr>
 		<tr>
-			<td rowspan="4" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:153px; text-align:center; vertical-align:middle; white-space:nowrap">영상</td>
+			<td rowspan="4" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:92px; text-align:center; vertical-align:middle; white-space:nowrap">영상</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 입국 과정 -1</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.youtube.com/watch?v=eWNeNzdmSXE">https://www.youtube.com/watch?v=eWNeNzdmSXE</a></td>
 		</tr>
 		<tr>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:32px; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 입국 과정 -2</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:23px; text-align:center; vertical-align:middle; white-space:nowrap">필리핀 입국 과정 -2</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.youtube.com/watch?v=SblD2y6gR4w">https://www.youtube.com/watch?v=SblD2y6gR4w</a></td>
 		</tr>
 		<tr>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:57px; text-align:center; vertical-align:middle; white-space:normal; width:162px">One Health Pass<br />
-			(eArrival Card/eTravel) 등록&nbsp;</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:23px; text-align:center; vertical-align:middle; white-space:normal; width:162px">eTravel 등록&nbsp;</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.youtube.com/watch?v=1MIUE-TdJiE">https://www.youtube.com/watch?v=1MIUE-TdJiE</a></td>
 		</tr>
 		<tr>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:32px; text-align:center; vertical-align:middle; white-space:nowrap">백신접종 증명서 발급</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:23px; text-align:center; vertical-align:middle; white-space:nowrap">백신접종 증명서 발급</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.youtube.com/watch?v=SG1BX02mgwU">https://www.youtube.com/watch?v=SG1BX02mgwU</a></td>
 		</tr>
 		<tr>
-			<td rowspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:64px; text-align:center; vertical-align:middle; white-space:nowrap">파일</td>
+			<td rowspan="3" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:69px; text-align:center; vertical-align:middle; white-space:nowrap">파일</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">식당 드레스코드</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://igohomenow.github.io/manila/Ref_Dresscode.html">https://igohomenow.github.io/manila/Ref_Dresscode.html</a></td>
 		</tr>
 		<tr>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:32px; text-align:center; vertical-align:middle; white-space:nowrap">일정 동선 (약도)</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:23px; text-align:center; vertical-align:middle; white-space:nowrap">일정 동선 (약도)</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://igohomenow.github.io/manila/Ref_DirectionMap.html">https://igohomenow.github.io/manila/Ref_DirectionMap.html&nbsp;</a></td>
+		</tr>
+		<tr>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:23px; text-align:center; vertical-align:middle; white-space:nowrap">숙소 인근 식당</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://docs.google.com/document/d/11hvYD1PMf-NFL3oj1aIUwmzLKuqUo2jdfnklYsCENMU/edit">https://docs.google.com/document/d/11hvYD1PMf-NFL3oj1aIUwmzLKuqUo2jdfnklYsCENMU/edit</a></td>
 		</tr>
 	</tbody>
 </table>
