--- a/0725.html
+++ b/0725.html
@@ -25,7 +25,7 @@
   <body>
 
 <p style="font-size:200%">  
-<strong> 마닐라 일정  (version : 0704) </strong> </p>  <br><br>
+<strong> 마닐라 일정  (ver : 0716) </strong> </p>  <br><br>
 
 
 <strong> 1. 준비사항 <br> </strong>
