--- a/0725.html
+++ b/0725.html
@@ -34,9 +34,10 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:93px; text-align:center; vertical-align:middle; white-space:nowrap; width:162px"><strong>입국 필요 서류</strong></td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:normal; width:578px">
-				0. 여권 <br />
-				1. 항공권 (귀국용 티켓)<br />
-			2. 이트래블(eTravel) QR 코드 (출발 72시간 이내부터 등록)<br />
+			0. 여권 <br />
+			1. 항공권 (귀국용 티켓)
+			&nbsp;&nbsp;&nbsp; --&gt; <a href="https://drive.google.com/drive/folders/1Pt5spf-cJ2CKF5bktnjRRVWPOtam-PmQ"> https://eTicket   </a> &nbsp;&nbsp; <br />
+			2. 이트래블(eTravel) QR 코드 (출발 72시간 이내부터 등록 가능)<br />
 			&nbsp;&nbsp;&nbsp; --&gt; <a href="https://etravel.gov.ph/"> https://etravel.gov.ph/ </a> &nbsp;&nbsp; <br />
 			3. 영문 코로나19 백신접종증명서&nbsp;&nbsp;&nbsp;&nbsp;   -->  정부24 또는 COOV  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:nowrap; width:410px">&nbsp; --&gt; &quot;4. 참고 자료 -&gt; 필리핀 입국 안내&quot; 참고</td>
@@ -302,7 +303,7 @@
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.youtube.com/watch?v=SG1BX02mgwU">https://www.youtube.com/watch?v=SG1BX02mgwU</a></td>
 		</tr>
 		<tr>
-			<td rowspan="3" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:69px; text-align:center; vertical-align:middle; white-space:nowrap">파일</td>
+			<td rowspan="4" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:95px; text-align:center; vertical-align:middle; white-space:nowrap">파일</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; text-align:center; vertical-align:middle; white-space:nowrap">식당 드레스코드</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://igohomenow.github.io/manila/Ref_Dresscode.html">https://igohomenow.github.io/manila/Ref_Dresscode.html</a></td>
 		</tr>
@@ -313,6 +314,10 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:23px; text-align:center; vertical-align:middle; white-space:nowrap">숙소 인근 식당</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://docs.google.com/document/d/11hvYD1PMf-NFL3oj1aIUwmzLKuqUo2jdfnklYsCENMU/edit">https://docs.google.com/document/d/11hvYD1PMf-NFL3oj1aIUwmzLKuqUo2jdfnklYsCENMU/edit</a></td>
+		</tr>
+		<tr>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:26px; text-align:center; vertical-align:middle; white-space:nowrap">항공권</td>
+			<td style="border-bottom:none; border-left:none; border-right:none; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://drive.google.com/drive/folders/1Pt5spf-cJ2CKF5bktnjRRVWPOtam-PmQ">https://drive.google.com/drive/folders/1Pt5spf-cJ2CKF5bktnjRRVWPOtam-PmQ</a></td>
 		</tr>
 	</tbody>
 </table>
