--- a/0725.html
+++ b/0725.html
@@ -36,7 +36,7 @@
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:normal; width:578px">
 			0. 여권 <br />
 			1. 항공권 (귀국용 티켓)
-			&nbsp;&nbsp;&nbsp; --&gt; --> 아시아나항공 홈페이지  &nbsp;&nbsp; <br />
+			&nbsp;&nbsp;&nbsp; --&gt; 아시아나항공 홈페이지  &nbsp;&nbsp; <br />
 			2. 이트래블(eTravel) QR 코드 (출발 72시간 이내부터 등록 가능)<br />
 			&nbsp;&nbsp;&nbsp; --&gt; <a href="https://etravel.gov.ph/"> https://etravel.gov.ph/ </a> &nbsp;&nbsp; <br />
 			3. 영문 코로나19 백신접종증명서&nbsp;&nbsp;&nbsp;&nbsp;   -->  정부24 또는 COOV  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
