--- a/0725.html
+++ b/0725.html
@@ -296,7 +296,7 @@
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:23px; text-align:center; vertical-align:middle; white-space:normal; width:162px">eTravel 등록&nbsp;</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.youtube.com/watch?v=1MIUE-TdJiE">https://www.youtube.com/watch?v=1MIUE-TdJiE</a></td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><a href="https://www.youtube.com/watch?v=6-k9qXvdLVg">https://www.youtube.com/watch?v=6-k9qXvdLVg</a></td>
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:23px; text-align:center; vertical-align:middle; white-space:nowrap">백신접종 증명서 발급</td>
