--- a/0725.html
+++ b/0725.html
@@ -25,7 +25,7 @@
   <body>
 
 <p style="font-size:200%">  
-<strong> 마닐라 일정  (ver : 0718) </strong> </p>  <br><br>
+<strong> 마닐라 일정  (ver : 0721) </strong> </p>  <br><br>
 
 
 <strong> 1. 준비사항 <br> </strong>
@@ -80,7 +80,7 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; vertical-align:middle; white-space:nowrap">10:55</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">마닐라 도착</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><strong>집결 : 항공기 출구 앞</strong>&nbsp; (현지 안내인 대기 예정)</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><strong> 집결 : 게이트 (7번) 앞  (공항 가이드 대기 예정임) </td>
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; vertical-align:middle; white-space:nowrap">12:30</td>
@@ -132,7 +132,7 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; vertical-align:middle; white-space:nowrap">14:40</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">예식장으로 출발 (단체버스로 이동)</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><strong>(시간엄수)</strong></td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><strong>(시간엄수), 15:00 성당도착 </strong></td>
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; vertical-align:middle; white-space:nowrap">15:30~(17:00)</td>
@@ -146,12 +146,12 @@
 		</tr>
 		<tr>
 			<td style="border-bottom:none; border-left:none; border-right:1px solid black; border-top:none; height:22px; vertical-align:middle; white-space:nowrap">17:30~19:30</td>
-			<td style="border-bottom:none; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">칵테일 서비스 (그랜드 볼룸)</td>
+			<td style="border-bottom:none; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">칵테일 서비스 (2F, 그랜드 볼룸)</td>
 			<td style="border-bottom:none; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">호텔 : Shangri-La The Fort, Manila</td>
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; height:23px; vertical-align:middle; white-space:nowrap">19:30~(21:00)</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:nowrap"><strong>저녁식사</strong> &amp; 피로연 (그랜드 볼룸)</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:nowrap"><strong>저녁식사</strong> &amp; 피로연 (2F, 그랜드 볼룸)</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:1px solid black; vertical-align:middle; white-space:nowrap">호텔 : Shangri-La The Fort, Manila</td>
 		</tr>
 		<tr>
@@ -173,7 +173,7 @@
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; vertical-align:middle; white-space:nowrap">13:00~18:00</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:normal; width:478px">반나절 시티 투어 (인트라무로스/리잘파크)&nbsp;</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:normal; width:478px">반나절 시티 투어 (인트라무로스/리잘파크 등)&nbsp;</td>
 			<td style="border-bottom:none; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:normal; width:352px">　</td>
 		</tr>
 		<tr>
@@ -262,9 +262,10 @@
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:70px; text-align:center; vertical-align:middle; white-space:nowrap">6</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:none; border-top:1px solid black; text-align:center; vertical-align:middle; white-space:nowrap">버스 (서울여행사)</td>
-			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:793px">온필<br />
-			- 전화번호 : 02-2085-8633</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:none; border-top:1px solid black; text-align:center; vertical-align:middle; white-space:nowrap">김영란/김예린</td>
+			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:793px">
+			김영란 : +63 915 085 2623 <br />				
+			김예린 : +63 917 158 5797  </td>
 		</tr>
 	</tbody>
 </table>
