--- a/0725.html
+++ b/0725.html
@@ -127,7 +127,7 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; vertical-align:middle; white-space:nowrap">12:00</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><strong>점심식사</strong></td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">도시락&nbsp;</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">개별 식사 (인근 식당 또는 배달 가능)&nbsp;</td>
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; vertical-align:middle; white-space:nowrap">14:40</td>
@@ -264,8 +264,7 @@
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; height:70px; text-align:center; vertical-align:middle; white-space:nowrap">6</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:none; border-top:1px solid black; text-align:center; vertical-align:middle; white-space:nowrap">김영란/김예린</td>
 			<td colspan="2" style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:1px solid black; text-align:left; vertical-align:middle; white-space:normal; width:793px">
-			김영란 : +63 915 085 2623 <br />				
-			김예린 : +63 917 158 5797  </td>
+			김영란 : +63 915 085 2623 <br />  </td>
 		</tr>
 	</tbody>
 </table>
