--- a/0725.html
+++ b/0725.html
@@ -90,7 +90,7 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; vertical-align:middle; white-space:nowrap">13:00</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><strong>점심식사</strong></td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">호텔 인근 식당</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"> 개별 식사 (인근 식당 또는 배달 가능) </td>
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; vertical-align:middle; white-space:nowrap">　</td>
