--- a/0725.html
+++ b/0725.html
@@ -80,7 +80,7 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; vertical-align:middle; white-space:nowrap">10:55</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">마닐라 도착</td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><strong> 집결 : 게이트 (7번) 앞  (공항 가이드 대기 예정임) </td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><strong> 집결 : 게이트(7번) 앞 (공항 직원과 함께 이동) </td>
 		</tr>
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; vertical-align:middle; white-space:nowrap">12:30</td>
