--- a/0725.html
+++ b/0725.html
@@ -184,7 +184,7 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; height:22px; vertical-align:middle; white-space:nowrap">18:30</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap"><strong>저녁식사&nbsp; (복장 : Smart Casual, No 슬리퍼)</strong></td>
-			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">사돈 초대 (Restaurant : East Ocean Palace)</td>
+			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:nowrap">사돈 초대 (Restaurant : East Ocean Palace) - 중식 </td>
 		</tr>
 		<tr>
 			<td style="border-bottom:none; border-left:none; border-right:1px solid black; border-top:none; height:23px; vertical-align:middle; white-space:nowrap">(21:00)</td>
