--- a/0725.html
+++ b/0725.html
@@ -45,7 +45,7 @@
 		<tr>
 			<td style="border-bottom:1px solid black; border-left:1px solid black; border-right:1px solid black; border-top:none; height:47px; text-align:center; vertical-align:middle; white-space:nowrap">개인 준비물&nbsp;</td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:normal; width:578px">휴대용 우산,&nbsp; 투어용품 (썬글라스, 모자, 수영복/수경, 샌들, 썬크림&nbsp; 등),<br />
-			환전(팁,기념품 등), 피로연 복장(드레스 또는 원피스)</td>
+			환전(팁,기념품 등), 피로연 복장(드레스 또는 원피스), 긴팔 옷(실내는 냉방으로 추울 수 있음) </td>
 			<td style="border-bottom:1px solid black; border-left:none; border-right:1px solid black; border-top:none; vertical-align:middle; white-space:normal; width:410px">&nbsp; --&gt; &quot;4. 참고 자료 -&gt; 식당 드레스코드&quot;&nbsp; 참고</td>
 		</tr>
 	</tbody>
